Verified joining with multiple keys work, records now come out in correct order